@@ -9,11 +9,14 @@ set(SOURCES
     LineEdit.cpp
     SpinBox.cpp
     StringEntry.cpp
+    ColorPicker.cpp
 )
 
 POTHOS_MODULE_UTIL(
     TARGET CoreEditWidgets
     SOURCES ${SOURCES}
-    LIBRARIES ${Qt5_LIBRARIES}
+    LIBRARIES
+        ${Qt5_LIBRARIES}
+        PothosQtColorPicker
     DESTINATION gui
 )
