@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.4.0 (pending)
 ==========================
 
+- Added ColorPicker edit widget for parameter color selection
 - Integrate GraphWidget with optional save/restore state hooks
 - Added plugin reload feature without closing/reopening the GUI
 - Re-factor access between top level objects, cleanup indirection
